# dogefuzz_sbseg_artifact

./: README.md
dogefuzz-results/: .gitignore  README.md  pyproject.toml
dogefuzz-results/aggregator/: __init__.py  aggregator.py  config.py
dogefuzz-results/aggregator/services/: contract.py  input.py  output.py  result.py
dogefuzz-results/aggregator/shared/: constants.py  exceptions.py  singleton.py  utils.py
dogefuzz-results/results/smartian_output_5_run/output/result-B2-compare/ilf/B2-ilf-1/0x4320e6f8c05b27ab4707cd1f6d5ce6f3e4b3a5a1/: log.txt
dogefuzz-results/results/smartian_output_5_run/output/result-B2-compare/ilf/B2-ilf-1/0x4e73b32ed6c35f570686b89848e5f39f20ecc106/: log.txt
dogefuzz-results/results/smartian_output_5_run/output/result-B2-compare/ilf/B2-ilf-1/0x52d2e0f9b01101a59b38a3d05c80b7618aeed984/: log.txt
dogefuzz-results/results/smartian_output_5_run/output/result-B2-compare/ilf/B2-ilf-1/0x7a8721a9d64c74da899424c1b52acbf58ddc9782/: log.txt
dogefuzz-results/results/smartian_output_5_run/output/result-B2-compare/ilf/B2-ilf-1/0x806a6bd219f162442d992bdc4ee6eba1f2c5a707/: cov.txt
dogefuzz-results/results/smartian_output_5_run/output/result-B2-compare/ilf/B2-ilf-1/0x84d9ec85c9c568eb332b7226a8f826d897e0a4a8/: log.txt
dogefuzz-results/results/smartian_output_5_run/output/result-B2-compare/ilf/B2-ilf-1/0x89c1b3807d4c67df034fffb62f3509561218d30b/: log.txt
dogefuzz-results/results/smartian_output_5_run/output/result-B2-compare/ilf/B2-ilf-1/0x96edbe868531bd23a6c05e9d0c424ea64fb1b78b/: log.txt
(+7749 files in other folders)
